# nba-trade-support

./: .gitignore  README.md  package-lock.json  package.json
apps/backend/: README.md  main.py  pyproject.toml  requirements.txt
apps/backend/app/: __init__.py
apps/backend/app/routers/: data.py  players.py  teams.py
apps/backend/app/services/: __init__.py  nba_service.py
apps/backend/data/: career_stats.json  players.json
apps/frontend/: package.json
apps/frontend/docs/: league-settings-saved-structure.md
apps/frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/frontend/src/app/league-settings/: page.tsx
apps/frontend/src/app/player-rankings/: page.tsx
apps/frontend/src/app/trade-analyzer/: page.tsx
apps/frontend/src/components/: Navbar.tsx  PlayerCard.tsx  ThemedNumberInput.tsx  ThemedSelect.tsx  TradeEvaluation.tsx
apps/frontend/src/lib/: api.ts  league-settings.ts  trade-context.ts  trade-value.ts
apps/frontend/src/types/: players.ts
